<resources>
    <string name="app_name">Programmation Android TD01</string>
    <string name="previous">Retour</string>
    <string name="welcome">Sélectionner un exercice</string>
    <string name="ex11">Exercice 1-1</string>
    <string name="ex12">Exercice 1-2</string>
    <string name="ex2">Exercice 2</string>
    <string name="ex3">Exercice 3</string>

    <!-- valeurs de l'exercice 2
    <string name="app_name">AndroidToastExample</string>
        -->
    <string name="menu_settings">Settings</string>
    <string name="button_label">Show message</string>
    <string name="image_content">image</string>
    <!-- -->

    <string name="firstapp">Ma première application Android</string>
    <string name="layout1">Layout 1</string>
    <string name="layout2">Layout 2</string>
    <string name="layout3">Layout 3</string>
    <string name="segment">Sélectionner un layout</string>
    <string name="ex4">Exercice 4</string>
    <string name="mainbutton">main button</string>
    <string name="mainbutton2">Appuyer longuement</string>
    <string name="exercice4">Exercice 4</string>
    <string name="message1">Message Bouton 1</string>
    <string name="message2">Message Bouton 2</string>
    <string name="linux_box">Linux</string>
    <string name="macos_box">MacOS</string>
    <string name="windows_box">Windows</string>
    <string name="display_label">Valider</string>
    <string name="ex5">Exercice 5</string>

</resources>