<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/mainbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainbutton" />

<!-- Code à rajouter demandé -->

    <Button
        android:id="@+id/mainbutton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainbutton2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:text="@string/exercice4" />

</LinearLayout>